@@ -53,7 +53,7 @@ select.tongue			{font-size:0.9em;}
 .default.head			{padding-top:20px;}
 .default.min			{padding-top:10px;}
 .default.declare		{padding:10px 0; font-size:0.9em; color:#ccc;}
-.default.graph			{width:640px; padding:20px 0;}
+.default.graph			{padding:20px 0;}
 .declare.head			{padding-top:5px; border-top:10px solid #fff; font-size:0.9em; color:#ccc;}
 
 /*	Money Module styles
