@@ -207,27 +207,27 @@ BANGLADESH
 
 #donor_graph
 <div class="default graph">
-<a href="#view=donors" style="display:block; width:560px; padding:20px 40px; color:#fff; font-size:1.8em; text-align:center; background-color:#008FFF;">
+<a href="#view=donors" style="display:block; width:880px; margin:0 auto; padding:20px 40px; color:#fff; font-size:1.8em; text-align:center; background-color:#008FFF;">
 	Where does the money come from?
 </a>
-<div class="peak_wrap" style="width:640px;"><div class="peak donor" style="margin:0 auto;"></div></div>
-<div id="view_test_graph" style="background-color:#fff; font-size:1.0em; line-height:1.3em; color:#444; margin-top:10px; padding-bottom:10px;"></div>
-<a href="#view=donors" class="view_all_money" style="padding:15px 0; font-size:1.1em; width:640px;">View all</a>
+<div class="peak_wrap" style="width:960px;"><div class="peak donor" style="margin:0 auto;"></div></div>
+<div id="donor_graph" style="background-color:#fff; font-size:1.0em; line-height:1.3em; color:#444; margin-top:10px;"></div>
+<a href="#view=donors" class="view_all_money" style="margin:0 auto; padding:15px 0; font-size:1.1em; width:960px;">View all</a>
 
 <script>
 	var ctrack=require("ctrack");
 	var data=ctrack.get_chart_data("data_chart_donors");
 	var opts={
 		layout:"right",
-		width:640,
+		width:960,
 		height:300,
-		center_x:150,
+		center_x:250,
 		center_y:150,
 		radius:135,
 		hole:40,
 		caption_css:{"width":250,"padding":"7px 20px","borderStyle":"solid","borderWidth":1, "color":"#666", "background-color":"#fff",},
 		color:["#74BAFF","#42A0FB","#0081FF","#49739C","#5B6572"],
-		caption_edge:10,
+		caption_edge:100,
 		stroke_width:2,
 		line_width:3,
 		tints:{
@@ -237,17 +237,17 @@ BANGLADESH
 			border:[0.5,0.5,0.5,0.5],
 		},
 	}
-	ctrack.draw_chart("#view_test_graph",data,opts);
+	ctrack.draw_chart("#donor_graph",data,opts);
 </script>
 </div>
 
 #sector_graph
 <div class="default graph">
-<a href="#view=sectors" style="display:block; width:560px; padding:20px 40px; color:#fff; font-size:1.8em; text-align:center; background-color:#00C475;">
-	Where does the money come from?
+<a href="#view=sectors" style="display:block; width:560px; margin:0 auto; padding:20px 40px; color:#fff; font-size:1.8em; text-align:center; background-color:#00C475;">
+	Where does the money go?
 </a>
-<div class="peak_wrap" style="width:640px;"><div class="peak sector" style="margin:0 auto;"></div></div>
-<div id="view_test_graph" style="background-color:#fff; font-size:1.0em; line-height:1.3em; color:#444; margin-top:10px; padding-bottom:10px;"></div>
+<div class="peak_wrap" style="width:960px;"><div class="peak sector" style="margin:0 auto;"></div></div>
+<div id="sector_graph" style="background-color:#fff; font-size:1.0em; line-height:1.3em; color:#444; margin-top:10px; padding-bottom:10px;"></div>
 <a href="#view=sectors" class="view_all_money" style="padding:15px 0; font-size:1.1em; width:640px;">View all</a>
 
 <script>
@@ -257,12 +257,12 @@ BANGLADESH
 		layout:"left",
 		width:640,
 		height:300,
-		center_x:150,
+		center_x:450,
 		center_y:150,
 		radius:135,
 		hole:40,
 		caption_css:{"width":250,"padding":"7px 20px","borderStyle":"solid","borderWidth":1, "color":"#666", "background-color":"#fff",},
-		color:["#74BAFF","#42A0FB","#0081FF","#49739C","#5B6572"],
+		color:["#79F5C3","#0EFF9E","#00C475","#318F69","#476B5C"],
 		caption_edge:10,
 		stroke_width:2,
 		line_width:3,
@@ -273,6 +273,6 @@ BANGLADESH
 			border:[0.5,0.5,0.5,0.5],
 		},
 	}
-	ctrack.draw_chart("#view_test_graph",data,opts);
+	ctrack.draw_chart("#sector_graph",data,opts);
 </script>
 </div>
