@@ -1,3 +1,8 @@
+Development Portal (2014-04-03 shi)
+==============================
+New graphs replace old money modules
+
+
 Development Portal (2014-04-02 shi)
 ==============================
 Changed Donor to Source & all instances on site
@@ -5,7 +10,7 @@ Changed description for Source title and hover states in table
 Changed Publishers to Agents (not internal yet)
 Added "Back to {country_name}" to Stats pages
 Added new query example to about page
-Added accessibility "tabbed keyboard" 
+Added accessibility "tabbed keyboard"
 
 
 Development Portal (2014-04-01 shi)
